fix last commit (overflow on tiles)

--- a/pages/map.css
+++ b/pages/map.css
@@ -248,5 +248,6 @@ nav, nav a {
 	line-height: 1.29;
 	-webkit-line-clamp: 5;
 	-webkit-box-orient: vertical;
+	overflow: hidden;
 	text-overflow: ellipsis;
 }
